--- a/.github/workflows/aarch64_generic.yml
+++ b/.github/workflows/aarch64_generic.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - arch: aarch64_generic
+          - arch: arm_cortex-a7_neon-vfpv4
             
     steps:
       - uses: actions/checkout@v3
